unpackaged/main/default/objects/Lead/fields/TX_First_Response_Time_m__c.field-meta.xml
<CustomField>
        <fullName>TX_First_Response_Time_m__c</fullName>
        <label>First Response Time (m)  (TX)</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>