unpackaged/main/default/objects/Lead/fields/TX_Garage__c.field-meta.xml
<CustomField>
        <fullName>TX_Garage__c</fullName>
        <label>Garage (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>