unpackaged/main/default/objects/Lead/fields/TX_Hobbies_and_Interests__c.field-meta.xml
<CustomField>
        <fullName>TX_Hobbies_and_Interests__c</fullName>
        <label>Hobbies and Interests (TX)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Arts and Entertainment</fullName>
                </value>
                <value>
                    <fullName>Culinary</fullName>
                </value>
                <value>
                    <fullName>Design</fullName>
                </value>
                <value>
                    <fullName>Science and Tech</fullName>
                </value>
                <value>
                    <fullName>Business</fullName>
                </value>
                <value>
                    <fullName>Outdoor Recreation</fullName>
                </value>
                <value>
                    <fullName>Sports, Fitness, Games</fullName>
                </value>
                <value>
                    <fullName>Travel</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>