unpackaged/main/default/objects/Lead/fields/TX_Home_Size__c.field-meta.xml
<CustomField>
        <fullName>TX_Home_Size__c</fullName>
        <inlineHelpText>Legacy Lead field for TX Marketing</inlineHelpText>
        <label>Home Size (TX)</label>
        <length>10</length>
        <type>Text</type>
    </CustomField>