unpackaged/main/default/objects/Lead/fields/TX_I_am_represented_by__c.field-meta.xml
<CustomField>
        <fullName>TX_I_am_represented_by__c</fullName>
        <label>I am represented by</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Real Estate Agent</fullName>
                </value>
                <value>
                    <fullName>Company</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>