unpackaged/main/default/objects/Lead/fields/TX_Interested_in_knowing_about_Other__c.field-meta.xml
<CustomField>
        <fullName>TX_Interested_in_knowing_about_Other__c</fullName>
        <label>Interested in knowing about "Other"</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>