unpackaged/main/default/objects/Lead/fields/TX_Interested_in_knowing_more_about__c.field-meta.xml
<CustomField>
        <fullName>TX_Interested_in_knowing_more_about__c</fullName>
        <label>Interested in knowing more about</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Health and wellness</fullName>
                </value>
                <value>
                    <fullName>Food and Wine</fullName>
                </value>
                <value>
                    <fullName>Golf</fullName>
                </value>
                <value>
                    <fullName>Arts and Culture</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>