unpackaged/main/default/objects/Lead/fields/TX_Kissing_Tree_Survey__c.field-meta.xml
<CustomField>
        <fullName>TX_Kissing_Tree_Survey__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Kissing Tree Survey (TX)</label>
        <type>Checkbox</type>
    </CustomField>