unpackaged/main/default/objects/Lead/fields/TX_Legacy_Lead__c.field-meta.xml
<CustomField>
        <fullName>TX_Legacy_Lead__c</fullName>
        <formula>if ( isblank(TX_Legacy_Lead_ID__c ), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Is this a lead imported from the previous Salesforce system for Texas?</inlineHelpText>
        <label>TX Legacy Lead (*see notes below)</label>
        <type>Checkbox</type>
    </CustomField>