unpackaged/main/default/objects/Lead/fields/TX_Legacy_Lead_ID__c.field-meta.xml
<CustomField>
        <fullName>TX_Legacy_Lead_ID__c</fullName>
        <externalId>true</externalId>
        <label>TX Legacy Lead ID</label>
        <length>20</length>
        <type>Text</type>
    </CustomField>