unpackaged/main/default/objects/Lead/fields/TX_Master_Bedroom__c.field-meta.xml
<CustomField>
        <fullName>TX_Master_Bedroom__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>Master Bedroom (TX)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Upstairs</fullName>
                </value>
                <value>
                    <fullName>Downstairs</fullName>
                </value>
                <value>
                    <fullName>No Preference</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>