unpackaged/main/default/objects/Lead/fields/TX_Realtor_Address__c.field-meta.xml
<CustomField>
        <fullName>TX_Realtor_Address__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Address (TX)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>