unpackaged/main/default/objects/Lead/fields/TX_Realtor_How_did_you_hear_about_us__c.field-meta.xml
<CustomField>
        <fullName>TX_Realtor_How_did_you_hear_about_us__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor How did you hear about us? (TX)</label>
        <type>TextArea</type>
    </CustomField>