unpackaged/main/default/objects/Lead/fields/TX_Realtor_Phone__c.field-meta.xml
<CustomField>
        <fullName>TX_Realtor_Phone__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Phone (TX)</label>
        <type>Phone</type>
    </CustomField>