unpackaged/main/default/objects/Lead/fields/TX_Realtor_Representing__c.field-meta.xml
<CustomField>
        <fullName>TX_Realtor_Representing__c</fullName>
        <inlineHelpText>for Traffic Card Information (TX)</inlineHelpText>
        <label>Realtor Representing (TX)</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>