unpackaged/main/default/objects/Lead/fields/TX_Timeframe_to_purchase__c.field-meta.xml
<CustomField>
        <fullName>TX_Timeframe_to_purchase__c</fullName>
        <label>Timeframe to purchase</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>30 Day</fullName>
                </value>
                <value>
                    <fullName>1-3 Month</fullName>
                </value>
                <value>
                    <fullName>3-6 Month</fullName>
                </value>
                <value>
                    <fullName>0-6 Months</fullName>
                </value>
                <value>
                    <fullName>6-12 Months</fullName>
                </value>
                <value>
                    <fullName>1 Year</fullName>
                </value>
                <value>
                    <fullName>1-2 Years</fullName>
                </value>
                <value>
                    <fullName>2+ Years</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>