unpackaged/main/default/objects/Lead/fields/Visit_Brookfield_website_during_search__c.field-meta.xml
<CustomField>
        <fullName>Visit_Brookfield_website_during_search__c</fullName>
        <label>Visit Brookfield website during search?</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>