unpackaged/main/default/objects/Lead/fields/What_is_your_price_range__c.field-meta.xml
<CustomField>
        <fullName>What_is_your_price_range__c</fullName>
        <inlineHelpText>Legacy TX Lead field for Marketing purposes</inlineHelpText>
        <label>What is your price range?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>$100,000 - $149,999</fullName>
                </value>
                <value>
                    <fullName>$150,000 - $199,999</fullName>
                </value>
                <value>
                    <fullName>Under $200,000</fullName>
                </value>
                <value>
                    <fullName>$200,000 - $249,000</fullName>
                </value>
                <value>
                    <fullName>$250,000 - $299,999</fullName>
                </value>
                <value>
                    <fullName>$300,000 - $349,999</fullName>
                </value>
                <value>
                    <fullName>$350,000 - $399,999</fullName>
                </value>
                <value>
                    <fullName>$400,000 - $500,000</fullName>
                </value>
                <value>
                    <fullName>Over $500,000</fullName>
                </value>
                <value>
                    <fullName>$400,000 - $499,999</fullName>
                </value>
                <value>
                    <fullName>$500,000 - $700,000</fullName>
                </value>
                <value>
                    <fullName>Over $700,000</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>