unpackaged/main/default/objects/Lead/fields/Word_your_friends_use_to_describe_you__c.field-meta.xml
<CustomField>
        <fullName>Word_your_friends_use_to_describe_you__c</fullName>
        <label>Word your friends use to describe you</label>
        <type>TextArea</type>
    </CustomField>