unpackaged/main/default/objects/Lead/listViews/Calgary_Lead.listView-meta.xml
<ListView>
        <fullName>Calgary_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>Calgary</label>
        <queue>Calgary</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>