unpackaged/main/default/objects/Lead/listViews/DC_Bradford_s_Landing_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Bradford_s_Landing_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Bradford's Landing</label>
        <queue>DC_Bradford_s_Landing</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>