unpackaged/main/default/objects/Lead/listViews/DC_Easton_Village_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Easton_Village_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Easton Village</label>
        <queue>DC_Easton_Village</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>