unpackaged/main/default/objects/Lead/listViews/DC_Heritage_Shores_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Heritage_Shores_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Heritage Shores</label>
        <queue>DC_Heritage_Shores</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>