unpackaged/main/default/objects/Lead/listViews/DC_Liberty_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Liberty_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Liberty</label>
        <queue>DC_Liberty</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>