unpackaged/main/default/objects/Lead/listViews/DC_Mayfair_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Mayfair_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Mayfair</label>
        <queue>DC_Mayfair</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>