unpackaged/main/default/objects/Lead/listViews/DC_Potomac_Shores_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Potomac_Shores_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Potomac Shores</label>
        <queue>DC_Potomac_Shores</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>