unpackaged/main/default/objects/Lead/listViews/DC_Snowden_Bridge_Single_Family_Lead.listView-meta.xml
<ListView>
        <fullName>DC_Snowden_Bridge_Single_Family_Lead</fullName>
        <filterScope>Queue</filterScope>
        <label>DC Snowden Bridge Single Family</label>
        <queue>DC_Snowden_Bridge_Single_Family</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </ListView>